<resources>
    <string name="app_name">TheNewsProject</string>
    <string name="the_news_project">News</string>
    <string name="latest">Latest</string>
    <string name="news_title_goes_here">News Title Goes Here</string>
    <string name="author">Author</string>
    <string name="source">Source</string>
    <string name="news_headline">News Headline</string>
    <string name="date">Date</string>
    <string name="headlines">Headlines</string>
    <string name="show_all">Show All</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
</resources>
